Chore: Complete Call

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -12,5 +12,6 @@
   "saySomething": "Say something",
   "voiceRecognition": "Voice Recognition",
   "swipeUpToCancel": "Swipe up to cancel",
-  "swipeInToResume": "Swipe in to resume"
+  "swipeInToResume": "Swipe in to resume",
+  "call": "Call"
 }
